# tabfm

./: CMakeLists.txt
src/: config_data.c  config_loader.c  config_loader.h  ipc.c  ipc.h  main.c  path.c  path.h
src/gui/: gui.c  gui.h  icons.h  tab.c  tab.h
src/gui/menu/: options.c  options.h
src/gui/menu/create/: create.c  create.h  new_file.c  new_file.h
src/gui/ui/: edit_create_new_dir.c  edit_create_new_dir.h  edit_rename.c  edit_rename.h  error.c  error.h  menu_create.c  menu_create.h  menu_create_new_file.c  menu_create_new_file.h  menu_operations.c  menu_operations.h  menu_options.c  menu_options.h  menu_view.c  menu_view.h  pbar.c  pbar.h
src/procs/: change_view.c  change_view.h  copy_move.c  copy_move.h  create_new_file.c  create_new_file.h  delete.c  delete.h  mark.c  mark.h  paste.c  paste.h  procs.h  send.c  send.h  set_as.c  set_as.h
